# agentica

./: .env.example  .gitignore  404.html  AGENT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  README_EN.md  README_JP.md  example.env  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  sitemap.xml  tmp_async_migrate.py  weather_query.py
.github/workflows/: docs.yml  ubuntu.yml
API_REFERENCE/: index.html
BEST_PRACTICES/: index.html
MCP_README/: index.html
acp/: index.html
actionflow/: __init__.py  actionflow.py  assistant.py  config.py  document.py  documents.py  flow.py  llm.py  memory.py  message.py  output.py  python_assistant.py  references.py  sqlite_storage.py  task.py  tool.py  utils.py
actionflow/emb/: __init__.py  azure_emb.py  hash_emb.py  ollama_emb.py  openai_emb.py  text2vec_emb.py  together_emb.py  word2vec_emb.py
actionflow/emb_dbs/: base.py  lance_emb_db.py
actionflow/embs/: azure_emb.py  hash_emb.py  ollama_emb.py  openai_emb.py  together_emb.py
actionflow/file/: __init__.py  csv.py  txt.py
actionflow/llm/: anthropic_llm.py  azure_llm.py  base.py  ollama_llm.py  openai_llm.py  together_llm.py
actionflow/llms/: anthropic_llm.py  azure_llm.py  base.py  ollama_llm.py  openai_llm.py  together_llm.py
actionflow/tools/: airflow.py  analyze_image.py  apify.py  create_image.py  duckduckgo.py  execute_code.py  file.py  get_url.py  jina.py  ocr.py  run_nb_code.py  run_python_code.py  save_file.py  search.py  search_exa.py  search_serper.py  shell.py  sql.py  summarize_text.py  url_crawler.py  wikipedia.py  write_code.py  write_nb_code.py  write_plan.py  write_python_code.py  yfinance.py
actionflow/utils/: __init__.py  log.py  misc.py  nb_code_parser.py  shell.py
actionflow/vectordb/: __init__.py  base.py  lancedb.py  pgvector.py
agentica/: __init__.py  agent.py  agent_session.py  api_registry.py  assistant.py  auxiliary_router.py  checkpoint.py  cli.py  config.py  cost_tracker.py  critic.py  deep_agent.py  deep_tools.py  diagnostics.py  document.py  documents.py  global_config.py  goals.py  guardrails.py  hooks.py  knowledge_base.py  lsp_diagnostics.py  media.py  memory.py  memorydb.py  message.py  pg_storage.py  provider_registry.py  python_agent.py  python_assistant.py  qdrant_memorydb.py  react_agent.py  reasoning.py  run_config.py  run_context.py  run_events.py  run_input.py  run_record.py  run_response.py  runner.py  (+11 more)
agentica/acp/: __init__.py  handlers.py  permissions.py  protocol.py  server.py  session.py  types.py
agentica/agent/: __init__.py  base.py  config.py  deep.py  history_filter.py  media.py  permissions.py  printer.py  prompts.py  runner.py  session.py  team.py  tools.py
agentica/cli/: __init__.py  commands.py  config.py  cron_daemon.py  display.py  doctor_display.py  extensions.py  interactive.py  main.py  runtime.py  self_manage.py  setup.py
agentica/compression/: __init__.py  manager.py  micro.py  tool_result_classification.py  tool_result_storage.py
agentica/cron/: cli_runner.py
agentica/db/: __init__.py  base.py  json.py  memory.py  mysql.py  postgres.py  redis.py  sqlite.py
agentica/emb/: azure_emb.py  azure_openai_emb.py  base.py  fireworks.py  fireworks_emb.py  gemini_emb.py  (+17 more)
async_tech_v1/: index.html
browsercomp_websearch/: index.html
config_tech_v2/: index.html
docs/: API.md  API_REFERENCE.md  BEST_PRACTICES.md  MCP_README.md  README.md  TECH_IMPL.md  TODO.md  TOOLS_GUIDE.md  Temporal_plan.md  UPDATE_TODO.md  acp.md  async_tech.md  async_tech_v1.md  browsercomp_websearch.md  config_tech_v2.md  cursor_like_editor_tools.md  index.md  memory.md  multi_round_deep_research_agent.md  multiedit_lsp_spec.md  name.md  paper.md  paper_zh.md  quickstart.md  react_agent_demo.py  refactor_v3.md  subagent_desgin.md  tests.md  tool_guardrails_demo.py  tools_redesign.md  update_multi_round_tech.md
evaluation/: README.md  prompt.py  run.py  run_web_search.py
examples/: 01_llm_demo.py  02_user_prompt_demo.py  03_user_messages_demo.py  04_memory_demo.py  05_response_model_demo.py  06_calc_with_csv_file_demo.py  07_create_image_tool_demo.py  08_ocr_tool_demo.py  09_remove_image_background_tool_demo.py  10_vision_demo.py  11_web_search_openai_demo.py  12_web_search_moonshot_demo.py  12_web_search_zhipuai_demo.py  13_storage_demo.py  14_custom_tool_demo.py  15_crawl_webpage_demo.py  16_get_top_papers_demo.py  17_find_paper_from_arxiv_demo.py  18_agent_input_is_list.py  19_naive_rag_demo.py  20_advanced_rag_demo.py  21_reference_in_prompt_rag_demo.py  22_chat_pdf_app_demo.py  23_python_agent_memory_demo.py  24_context_demo.py  25_tools_with_context_demo.py  26_complex_translate_demo.py  27_research_agent_demo.py  28_rag_integrated_langchain_demo.py  29_rag_integrated_llamaindex_demo.py  30_text_classification_demo.py  31_team_news_article_demo.py  32_team_debate_demo.py  33_self_evolving_agent_demo.py  34_llm_os_demo.py  35_workflow_investment_demo.py  36_workflow_news_article_demo.py  37_workflow_write_novel_demo.py  38_workflow_write_tutorial_demo.py  39_audio_multi_turn_demo.py  (+84 more)
paper/: index.html
paper_zh/: index.html
quickstart/: index.html
refactor_v3/: index.html
search/: search_index.json
tests/: conftest.py  index.html  memory_test_case.py  react_agent.py  test_acp.py  test_agent.py  test_agent_as_tool.py  test_agent_calc.py  test_agent_core.py  test_agent_multimodal.py  test_agent_stream.py  test_agent_tools_integration.py  test_api_registry.py  test_architecture_fixes.py  test_async_tool.py  test_auxiliary_router.py  test_buildin_tools.py  test_cache_control.py  test_checkpoint_cli.py  test_claude_max_tokens.py  test_cli.py  test_cli_setup.py  test_compression.py  test_create_image.py  test_critic.py  test_cron.py  test_cron_runtime.py  test_deep_agent.py  test_deep_tools.py  test_deepseek_reasoning.py  test_default_model_resolution.py  test_doctor.py  test_edit_tool.py  test_emb.py  test_error_handling.py  test_execute_code.py  test_experience.py  test_file_reader.py  test_flow.py  test_flow_with_functions.json  (+63 more)
(+724 files in other folders)
